# Killer-Sudoku

./: .gitignore  CMakeLists.txt  File.cpp  color.h  gate.h  sat.cpp  sat.h  sudoku.cpp  sudoku.h  sudokuGen.cpp
include/: sat.h  sudoku.h
source/: sat.cpp  sudoku.cpp  sudokuGen.cpp
